# SNCabling

./: CMakeLists.txt  README.md  README.rst
documentation/: CMakeLists.txt  README.rst
documentation/CaloHV/CaloHVScheme/: GNUmakefile  calohv_addressing.tex  calohv_cabling_history.tex  calohv_cabling_table.tex  calohv_crates.tex  calohv_pp.tex  calohv_rack.tex  main.tex
documentation/CaloHV/CaloHVScheme/fig/: fig-calohv-1.fig  fig-calohv-2-france.fig  fig-calohv-2-italy.fig  fig-calohv-labels-1.fig
documentation/CaloSignal/CaloSignalScheme/: GNUmakefile  calosignal_addressing.tex  calosignal_cabling_table.tex  calosignal_crates.tex  calosignal_pp.tex  main.tex
documentation/CaloSignal/CaloSignalScheme/fig/: fig-calosignal-1.fig  fig-calosignal-crate-0.fig  fig-calosignal-crate-1.fig  fig-calosignal-crate-2.fig  fig-calosignal-racks.fig
documentation/LIS/Documents/: Length_Calculation_without_Uniform_Bundles.xlsx
documentation/LIS/LISCablingScheme/: GNUmakefile  main.tex
documentation/LIS/LISCablingScheme/fig/: fig-lis-1.fig
documentation/LIS/LISCablingScheme/samples/: calo_0.tex  lis_mapping-skel.csv
documentation/LIS/scripts/: README.rst  lis_map_print.py  lis_map_skel_gen.py
documentation/LIS/scripts/template/: lis_table_main.tex.in
documentation/Specifications/CaloHV/CaloHVScheme/: GNUmakefile  calohv_cabling_history.tex  calohv_cabling_table.tex  calohv_crates.tex  calohv_pp.tex
documentation/Specifications/CaloHV/CaloHVScheme/fig/: fig-calohv-1.fig  fig-calohv-2-france-a.fig  fig-calohv-2-france.fig  fig-calohv-2-italy-a.fig  fig-calohv-2-italy.fig  fig-calohv-2.fig  fig-calohv-pp-0.fig  fig-calohv-pp-1.fig  fig-calohv-rack2.fig
documentation/Specifications/CaloSignal/CaloSignalScheme/: GNUmakefile  calosignal_cabling_table.tex  calosignal_crates.tex  calosignal_racks.tex  main.tex
documentation/Specifications/CaloSignal/CaloSignalScheme/fig/: fig-calosignal-crate-0.fig  fig-calosignal-crate-1.fig  fig-calosignal-crate-2.fig  fig-calosignal-pp-0-ext.fig  fig-calosignal-pp-1-ext.fig  fig-calosignal_crate_cabling.fig
documentation/Specifications/LIS/LISCablingScheme/samples/: lis_mapping.csv
documentation/common/: om_addressing.tex
documentation/examples/: CMakeLists.txt  ex_cabling_service.cxx  ex_calo_hv_cabling.cxx
resources/: CMakeLists.txt
resources/config/snemo/demonstrator/cabling/CaloHV/: README.rst
resources/config/snemo/demonstrator/cabling/CaloSignal/: README.rst
resources/config/snemo/demonstrator/cabling/LIS/: README.rst
resources/config/snemo/demonstrator/cabling/LIS/0.1/: lis_mapping.csv
resources/config/snemo/demonstrator/cabling/LIS/tags/original/: lis_mapping_1.csv
resources/examples/SNCablingClient/: CMakeLists.txt  README.rst  sncablingclient.cxx
resources/snemo/demonstrator/cabling/CaloHV/: README.rst
resources/snemo/demonstrator/cabling/CaloHV/0.2/CaloHVCabling/: calohv_mapping-skel.csv
resources/snemo/demonstrator/cabling/CaloHV/0.2/CaloHVCabling/Labels/: calohv_labels_README.rst  calohv_labels_extharness.lis  calohv_labels_extharness_to_board.lis  calohv_labels_intcable_to_pmt_5.lis  calohv_labels_intcable_to_pmt_7.lis
resources/snemo/demonstrator/cabling/CaloHV/0.3/CaloHVCabling/Labels/: calohv_labels_intcable_to_pmt_1.lis  calohv_labels_intcable_to_pmt_14.lis  calohv_labels_intcable_to_pmt_15.lis  calohv_labels_intcable_to_pmt_17.lis  calohv_labels_intcable_to_pmt_18.lis  calohv_labels_intcable_to_pmt_19.lis  calohv_labels_intcable_to_pmt_3.lis  calohv_labels_intcable_to_pmt_9.lis
resources/snemo/demonstrator/cabling/CaloSignal/: README.rst
resources/snemo/demonstrator/cabling/CaloSignal/0.1/CaloSignalCabling/Labels/: calosignal_labels_README.rst  calosignal_labels_extcable_0.lis  calosignal_labels_extcable_16.lis  calosignal_labels_extcable_17.lis  calosignal_labels_extcable_20.lis  calosignal_labels_extcable_21.lis  calosignal_labels_extcable_7.lis  calosignal_labels_extcable_9.lis  calosignal_labels_extcable_to_channel_0.lis  calosignal_labels_extcable_to_channel_13.lis  calosignal_labels_extcable_to_channel_14.lis  calosignal_labels_extcable_to_channel_15.lis  calosignal_labels_extcable_to_channel_16.lis  calosignal_labels_extcable_to_channel_17.lis  calosignal_labels_extcable_to_channel_2.lis  calosignal_labels_extcable_to_channel_20.lis  calosignal_labels_extcable_to_channel_21.lis  calosignal_labels_extcable_to_channel_4.lis  calosignal_labels_extcable_to_channel_6.lis  (+30 more)
resources/snemo/demonstrator/cabling/CaloSignal/0.2/CaloSignalCabling/: calosignal_mapping.csv
sncabling/: CMakeLists.txt  calo_hv_cabling.cc  calo_hv_cabling.h  calo_hv_id.cc  calo_signal_cabling.cc  calo_signal_cabling.h  calo_signal_id.cc  calo_signal_id.h  exception.h  label.cc  label.h  lis_cabling.cc  lis_cabling.h  lis_id.cc  lis_id.h  om_id.cc  resource_files.cc.in  resource_files.h  service.cc  sncabling.cc.in  sncabling_library.cc  sncabling_library.h  time_mark.cc  time_mark.h  utils.cc  utils.h  version.cc
sncabling/testing/: CMakeLists.txt  test-calo_hv_cabling.cxx  test-calo_hv_id.cxx  test-calo_signal_cabling.cxx  test-calo_signal_id.cxx  test-label.cxx  test-lis_cabling.cxx  test-lis_id.cxx  test-om_id.cxx  test-service.cxx  test-sncabling.cxx  test-time_mark.cxx  test-utils.cxx
source/: CMakeLists.txt
source/sncabling/: CMakeLists.txt  calo_feb_id.cc  calo_feb_id.h  calo_hv_cabling.cc  calo_hv_cabling.h  calo_hv_id.cc  calo_hv_id.h  calo_signal_cabling.cc  calo_signal_cabling.h  label.cc  label.h  lis_cabling.cc  lis_cabling.h  logger.h  om_id.h  resource_files.cc.in  resource_files.h  service.cc  service.h  sncabling.cc.in  sncabling.h  sncabling_binreloc.c  sncabling_config.h.in  sncabling_library.cc  sncabling_library.h  time_mark.cc  utils.cc  utils.h  version.cc  version.h.in
source/sncabling/testing/: CMakeLists.txt  test-calo_feb_id.cxx  test-calo_hv_cabling.cxx  test-calo_hv_id.cxx  test-calo_signal_cabling.cxx  test-label.cxx  test-lis_cabling.cxx  test-lis_id.cxx  test-om_id.cxx  test-service.cxx  test-utils.cxx
source/sncablingquery/: CMakeLists.txt  sncablingquery.in
(+119 files in other folders)
