# - installation of resource files and dirs:

message (STATUS "[info] Resource files installation directives..")
message (STATUS "[info]   CMAKE_INSTALL_DATAROOTDIR = '${CMAKE_INSTALL_DATAROOTDIR}'")
message (STATUS "[info]   CMAKE_CURRENT_SOURCE_DIR  = '${CMAKE_CURRENT_SOURCE_DIR}'")

install(DIRECTORY snemo
  DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${SNCABLING_TAG}/config/
  FILE_PERMISSIONS OWNER_READ GROUP_READ WORLD_READ
  DIRECTORY_PERMISSIONS
  OWNER_READ GROUP_READ WORLD_READ
  OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
  #REGEX "_*" EXCLUDE
  )

# - end