# - Copy resource files from the source dir to the build dir:
add_custom_target(SNCablingResources ALL ${CMAKE_COMMAND} -E copy_directory
  ${CMAKE_CURRENT_SOURCE_DIR}/config
  ${PROJECT_BUILD_DATAROOTDIR}/${SNCABLING_TAG}/resources/config
  )

add_custom_target(SNCablingExamples ALL ${CMAKE_COMMAND} -E copy_directory
  ${CMAKE_CURRENT_SOURCE_DIR}/examples
  ${PROJECT_BUILD_DATAROOTDIR}/${SNCABLING_TAG}/resources/examples
  )

install(DIRECTORY ${PROJECT_BUILD_DATAROOTDIR}/${SNCABLING_TAG}/resources/config/
  DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${SNCABLING_TAG}/resources/config
  FILE_PERMISSIONS OWNER_READ GROUP_READ WORLD_READ
  DIRECTORY_PERMISSIONS
  OWNER_READ GROUP_READ WORLD_READ
  OWNER_WRITE
  OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
  PATTERN "*~" EXCLUDE PATTERN "_*" EXCLUDE
  )

install(DIRECTORY ${PROJECT_BUILD_DATAROOTDIR}/${SNCABLING_TAG}/resources/examples/
  DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${SNCABLING_TAG}/resources/examples
  FILE_PERMISSIONS OWNER_READ GROUP_READ WORLD_READ
  DIRECTORY_PERMISSIONS
  OWNER_READ GROUP_READ WORLD_READ
  OWNER_WRITE
  OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
  PATTERN "*~" EXCLUDE PATTERN "_*" EXCLUDE
  )

# - end
